Set environment and done require changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/cscv_master
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.profiles.active = ${ENV:prod}
 spring.jpa.hibernate.ddl-auto=update
 #Size Configuration
 spring.servlet.multipart.max-file-size=30MB
