--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active = ${ENV:prod}
+spring.profiles.active = ${ENV:dev}
 spring.jpa.hibernate.ddl-auto=update
 #Size Configuration
 spring.servlet.multipart.max-file-size=30MB
