minor change in hikari maxlifetime and jpa open view.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.profiles.active = ${ENV:dev}
+spring.profiles.active = ${ENV:prod}
 spring.jpa.hibernate.ddl-auto=update
 #Size Configuration
 spring.servlet.multipart.max-file-size=30MB
+
+spring.datasource.hikari.maxLifetime=120000
+spring.jpa.open-in-view=false
+
