--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://dpg-ck3tqpj6fquc73esnkhg-a.oregon-postgres.render.com:5432/cscv_master
-spring.datasource.username=cscv_master_user
-spring.datasource.password=s1bn4xdXLVkPtUGhQ0LuIufz3LvqIb9J
+spring.datasource.url=jdbc:postgresql://dpg-ck42c0j6fquc7383dkmg-a.Singapore-postgres.render.com:5432/cscv_master_mkh6
+spring.datasource.username=cscv_master_mkh6_user
+spring.datasource.password=XzlJ2bwzfmQLmoPIwAwyyuRXY8Uihw2i
