--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.profiles.active = ${ENV:dev}
 spring.jpa.hibernate.ddl-auto=update
 #Size Configuration
-spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+spring.batch.job.enabled=false
